--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.26.3",
     "autoprefixer": "^10.4.21",
     "postcss-react-strict-dom": "^0.0.6"
   },
