--- a/package.json
+++ b/package.json
@@ -1,20 +1,35 @@
 {
-  "name": "expo-rsd",
+  "name": "expo-tabs-rsd",
+  "main": "src/index.ts",
   "version": "1.0.0",
-  "main": "src/index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest --watchAll"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/metro-runtime": "4.0.2-canary-20250306-d9d3e02",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-navigation/native": "^7.0.14",
     "expo": "53.0.0-canary-20250306-d9d3e02",
+    "expo-font": "14.0.0-canary-20250306-d9d3e02",
+    "expo-linking": "7.1.0-canary-20250306-d9d3e02",
+    "expo-router": "4.0.18-canary-20250306-d9d3e02",
+    "expo-splash-screen": "0.29.23-canary-20250306-d9d3e02",
     "expo-status-bar": "2.0.2-canary-20250306-d9d3e02",
+    "expo-system-ui": "5.0.0-canary-20250306-d9d3e02",
+    "expo-web-browser": "14.1.0-canary-20250306-d9d3e02",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.78.0",
+    "react-native-reanimated": "~3.17.1",
+    "react-native-safe-area-context": "5.2.0",
+    "react-native-screens": "~4.9.1",
     "react-native-web": "~0.19.13",
     "react-strict-dom": "^0.0.34"
   },
@@ -22,9 +37,14 @@
     "react": "19.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.2",
+    "@types/react": "~19.0.10",
     "autoprefixer": "^10.4.21",
-    "postcss-react-strict-dom": "^0.0.6"
+    "jest": "^29.2.1",
+    "jest-expo": "53.0.0-canary-20250306-d9d3e02",
+    "postcss-react-strict-dom": "^0.0.6",
+    "react-test-renderer": "19.0.0",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
