more cleanup, trying to get styles working across shared ui library in next (working) and expo (not picking up styles defined in the ui lib)

--- a/apps/mobile/app.json
+++ b/apps/mobile/app.json
@@ -25,7 +25,12 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./src/assets/images/favicon.png"
+      "favicon": "./src/assets/images/favicon.png",
+      "babel": {
+        "include": [
+          "@repo/ui"
+        ]
+      }
     },
     "plugins": [
       "expo-router"
