--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@repo/ui": "*",
     "@expo/metro-runtime": "4.0.2-canary-20250306-d9d3e02",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.0.14",
